# transaction-manager

./: .dockerignore  .env  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.override.yml  docker-compose.test.yml  docker-compose.yml  pyproject.toml
backend/: .dockerignore  Dockerfile  README.md  entrypoint.sh  pyproject.toml  requirements.dev.txt  requirements.test.txt  requirements.txt
backend/scripts/: entrypoint.sh  replace_windows_line_endings.py
backend/tests/: conftest.py
backend/tests/integration/: conftest.py
backend/tests/integration/fixtures/: test.csv
backend/tests/integration/tests/: test_upload_transaction_csv.py  upload_transaction_csv_test.py
backend/tests/integration/utils/: testcontainers.py
backend/tests/transactionManager/: utils_test.py
backend/tests/transactionManagerProcessor/: tasks_test.py
backend/tests/transactionManagerProcessor/endpoints/: reports_test.py  transactions_test.py
backend/tests/unit/: conftest.py
backend/tests/unit/fixtures/: transactions_testdata.py
backend/tests/unit/fixtures/serializers/: transactions_testdata.py
backend/tests/unit/tests/transactionManagerCore/: endpoints_test.py
backend/tests/unit/tests/transactionManagerProcessor/: dto_test.py  models_test.py  (+2 more)
backend/transactionManager/: manage.py
backend/transactionManager/logs/: donkey
backend/transactionManager/transactionManager/: asgi.py  celery.py  settings.py  settings_dev.py  settings_local.py  settings_test.py  urls.py  utils.py  wsgi.py
backend/transactionManager/transactionManager/exceptions/: domain_errors.py  handlers.py
backend/transactionManager/transactionManagerCore/: api_root.py  apps.py  endpoints.py  urls.py
backend/transactionManager/transactionManagerProcessor/: __init__.py  apps.py  dto.py  enums.py  models.py  serializers.py  signals.py  tasks.py  urls.py
backend/transactionManager/transactionManagerProcessor/endpoints/: __init__.py  customer_summary.py  product_summary.py  reports.py  transactions.py  transations.py
backend/transactionManager/transactionManagerProcessor/migrations/: 0001_initial.py  0002_alter_transaction_quantity.py  0002_alter_transaction_timestamp.py  0003_alter_transaction_amount_and_more.py  0003_alter_transaction_customer_id_and_more.py  0004_alter_transaction_amount_and_more.py  0004_alter_transaction_id.py  0005_alter_transaction_currency.py  0005_rename_id_transaction_transaction_id.py  0006_transactioncsv_csvprocessingresult.py
backend/transactionManager/transactionManagerProcessor/utils/: currency.py  currency_exchange.py  file_validation.py  qs_builder.py  queryset_builder.py
(+13 files in other folders)
